{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 20,
  "lineage": "db24b450-2dca-2da3-9c37-5941004c35e5",
  "resources": [
    {
      "module": "module.redshift",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jwan_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516088479088:security-group/sg-047eb0039cc833363",
            "description": "Security group for Redshift cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047eb0039cc833363",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jwan-security-group",
            "name_prefix": "",
            "owner_id": "516088479088",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f79678f5b06d3c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_and_subnet.aws_vpc.jwan_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516088479088:route-table/rtb-061371e6490262145",
            "id": "rtb-061371e6490262145",
            "owner_id": "516088479088",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "demo-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "demo-vpc-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed22cb7f37d79eac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee75b5a49cd3be6d",
            "route_table_id": "rtb-061371e6490262145",
            "subnet_id": "subnet-05523553b3c2a9c9e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516088479088:subnet/subnet-05523553b3c2a9c9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.41.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05523553b3c2a9c9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "516088479088",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-redshift-us-east-1a"
            },
            "tags_all": {
              "Name": "demo-vpc-redshift-us-east-1a"
            },
            "vpc_id": "vpc-0ed22cb7f37d79eac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516088479088:vpc/vpc-0ed22cb7f37d79eac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0b1306a1894d5bde6",
            "default_route_table_id": "rtb-054d5eed44bd77d1a",
            "default_security_group_id": "sg-0700dad7c5d2350e0",
            "dhcp_options_id": "dopt-df21cfba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ed22cb7f37d79eac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-054d5eed44bd77d1a",
            "owner_id": "516088479088",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_and_subnet",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jwan_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516088479088:internet-gateway/igw-0148624a2953e15a4",
            "id": "igw-0148624a2953e15a4",
            "owner_id": "516088479088",
            "tags": {
              "Name": "jwan-internet-gateway"
            },
            "tags_all": {
              "Name": "jwan-internet-gateway"
            },
            "vpc_id": "vpc-08f79678f5b06d3c9"
          },
          "dependencies": [
            "module.vpc_and_subnet.aws_vpc.jwan_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_and_subnet",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0148624a2953e15a4",
            "id": "r-rtb-01ad3d38cf1c183fe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01ad3d38cf1c183fe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_and_subnet.aws_internet_gateway.jwan_igw",
            "module.vpc_and_subnet.aws_vpc.jwan_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_and_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jwan_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516088479088:subnet/subnet-0cf71ac1970e1325e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf71ac1970e1325e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "516088479088",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jwan-subnet"
            },
            "tags_all": {
              "Name": "jwan-subnet"
            },
            "vpc_id": "vpc-08f79678f5b06d3c9"
          },
          "dependencies": [
            "module.vpc_and_subnet.aws_vpc.jwan_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_and_subnet",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jwan_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516088479088:vpc/vpc-08f79678f5b06d3c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fd6a4f32b214c586",
            "default_route_table_id": "rtb-01ad3d38cf1c183fe",
            "default_security_group_id": "sg-0d15d41b9f4997607",
            "dhcp_options_id": "dopt-df21cfba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08f79678f5b06d3c9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ad3d38cf1c183fe",
            "owner_id": "516088479088",
            "tags": {
              "Name": "jwan-vpc"
            },
            "tags_all": {
              "Name": "jwan-vpc"
            }
          }
        }
      ]
    }
  ]
}